fixed ingredient name spacing

--- a/style/styles.css
+++ b/style/styles.css
@@ -166,12 +166,13 @@ td:nth-child(2) {
 
 td:nth-child(3) {
 	font-family: "ScalaSans Cond";
-	padding-left: 3px;
+	padding-left: 4px;
 }
 
 
 td:nth-child(4) {
 	font-family: "ScalaSans Cond";
+	padding-left: 4px;
 }
 
 td:nth-child(5) {
